--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },"prisma": {
+  "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "axios": "^1.7.7",
     "next": "14.2.5",
+    "prisma": "^5.22.0",
     "pusher": "^5.2.0",
     "pusher-js": "8.4.0-rc2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
