--- a/package.json
+++ b/package.json
@@ -6,27 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
-  },"prisma": {
-  "seed": "ts-node prisma/seed.ts"
+    "lint": "next lint",
+    "seed": "ts-node prisma/saveMessage.js"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.js"
+  },
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "axios": "^1.7.7",
+    "encoding": "^0.1.13",
+    "nanoid": "^5.0.8",
     "next": "14.2.5",
+    "pg": "^8.13.1",
     "prisma": "^5.22.0",
     "pusher": "^5.2.0",
     "pusher-js": "8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
